--- a/211113/text.html
+++ b/211113/text.html
@@ -22,12 +22,30 @@
     오는말이 곱다</p>
 <!-- 파일 안에서 줄바꿈을 하더라도 실제로는 안되어있음 -->
 
-<!-- <br> 태그는 줄바꿈 태그 -> 태그 단독으로 사용 -->
-<p>가는 날이 장날이다<br>가랑비에 옷 젖는 줄 모른다.</p>
+    <!-- <br> 태그는 줄바꿈 태그 -> 태그 단독으로 사용 -->
+    <p>가는 날이 장날이다<br>가랑비에 옷 젖는 줄 모른다.</p>
 
-<blockquote>가지 많은 나무에 바람 잘 날 없다.</blockquote>
-<b>간에 기별도 안간다.</b>
-<p>간에 <b>기별</b>도 안간다.</p>
-<p>간에 <strong>기별</strong>도 안간다.</p>
+    <blockquote>가지 많은 나무에 바람 잘 날 없다.</blockquote>
+    <b>간에 기별도 안간다.</b>
+    <p>간에 <b>기별</b>도 안간다.</p>
+    <p>간에 <strong>기별</strong>도 안간다.</p>
+
+    <p>간이 콯알만해지다.</p>
+    <p>간이 <i>콩알</i>만해지다.</p>
+    <p>간이 <em>콩알</em>만해지다.</p>
+
+
+
+    <p>print("Hello")</p>
+    <p><code>print("Hello")</code></p>
+
+    <p>가격: 15000원 <small>부가세 별도</small></p>
+    <p>물은 H<sub>2</sub>O 입니다.</p>
+    <p>4 = 2<sup>2</sup> 입니다.</p>
+
+    <p>개구리 <u>올챙이 적</u> 생각을 못한다.</p>
+    <p>개천에서 <s>용 난다</s></p>
+
+
 </body>
 </html>
