계란찜 레시피

--- a/211113/recipe.html
+++ b/211113/recipe.html
@@ -6,11 +6,38 @@
 </head>
 <body>
 
+    <p>계란찜에 대한 정보</p>
+    <ul>
+        <li>소요시간: 7~10분</li>
 
+    </ul>
+    <ul>
+        <li>난이도: **</li>
+    </ul>
+    <hr>
 
-
-
-
+    <dl>
+        <dt>재료</dt>
+        <dd>계란 3개</dd>
+        <dd>맛술 2큰술</dd>
+        <dd>다시마물</dd>
+        <dd>다진 양파 1큰술</dd>
+        <dd>다진 당근 1큰술</dd>
+        <dd>송송 자른 쪽파 1대</dd>
+        <dd>참기름 1/3큰술</dd>
+    </dl>
+    <hr>
+    <p>요리 순서</p>
+    <ol>
+        <li>계란 3개를 풀어 고운체에 걸러 알끈을 먼저 제거합니다.</li>
+        <li>알끈을 제거한 계란 약 2/3컵에 다시마 육수 2/3컵을 넣어줍니다.</li>
+        <li>맛술을 2큰술 넣어 은은한 단맛을 추가하고 비린맛도 잡아 줍니다.</li>
+        <li>전자레인지 전용 그릇에 달걀물을 70~80% 정도로만 담아 줍니다.</li>
+        <li>전자레인지에 넣기 전에 다진 양파 1큰술과 다진 당근 1큰술을 넣어 섞어 줍니다.</li>
+        <li>뚜껑을 덮고 전자렌지에 넣어 조리합니다. 전자렌지 용량에 따라 약 2분~3분 30초 사이로 조리합니다.</li>
+        <li>완성된 계란찜을 꺼내 송송 썬 쪽파 1대를 올려줍니다.</li>
+        <li>참기름 1/3큰술을 둘러 완성합니다.</li>
+    </ol>
 
 
 
