시간표를 만듬

--- a/211114/quiz.html
+++ b/211114/quiz.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>HTML 목록 만들기</title>
+    <title>간단한 퀴즈 만들기</title>
 </head>
 <body>
 
@@ -48,7 +48,6 @@
         <li>직각 이등변 삼각형, 30</li>
         <li>예각 삼각형, 30</li>
     </ol>
-
 
 
 
