--- a/211114/image.html
+++ b/211114/image.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-
+    <img src="img/apple.png" alt="사과 사진이 있던 자리" width="50%">
+    <img src="orange.jpg" alt="오렌지 사진이 있던 자리" width="150px">
+    <img src="orange.jpg" alt="오렌지 사진이 있던 자리" width="50px">
+    <img src="orange.jpg" alt="오렌지 사진이 있던 자리" width="50px" height="100px">
+    <iframe width="150" src="https://www.youtube.com/watch?v=exyo3SHcToU" title="Youtube"></iframe>
 
 
 
